--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,8 +35,8 @@ jobs:
     # - name: Run tests
     #   run: npm run test:e2e tests/acceptance/features
 
-    - name: Run a node.js script
-      run: node index.js
+    - name: Run a node script
+      run: node test.js
 
     - name: Stop containers
       if: always()
